== 0.8.0 (2010-06-06)

=== Bugfixes
* Require profile option causes a NoMethodError for Cucumber with JRuby (#601 John Firebaugh)
* Deprecations warnings with Spork + Cucumber + RSpec 2.0. (#619 Brian Cardarella)
* Fixed edge case compatibility problem with Gherkin 1.0.30. (#618 Aslak Hellesøy)

=== New features
* Better table support in the V8 Javascript support (Joseph Wilk)
* JSON formatters (json and json_pretty). (Jari Bakken)

=== Removed features
* The --no-diff option is removed. If you're using RSpec you will *always* get diffs. (Aslak Hellesøy)

=== Changed Features
* Upgraded to be compatible with rspec 2.0.0.beta.10 (Aslak Hellesøy)
* Ruby snippets will use "([^"]*)" instead of "([^\"]*)"$/ - wasn't properly fixed in 0.7.1. (Aslak Hellesøy)
* Preserve the order features files are passed and use this for execution order (#617 Joseph Wilk)

== 0.7.3 (2010-05-17)

=== New Features
* Table cells can now contain escaped bars - \| and escaped backslashes - \\. (Gregory Hnatiuk, Aslak Hellesøy)
* Added support for Around hooks. (#605 John Firebaugh)

== 0.7.2 (2010-05-03)

=== Bugfixes
* REALLY add backwards compatibility fix (with deprecation warning) for legacy 0.6.4 formatters. (Aslak Hellesøy)

== 0.7.1 (2010-05-03)

=== Bugfixes
* Add backwards compatibility fix (with deprecation warning) for legacy 0.6.4 formatters. (Aslak Hellesøy)

=== Changed Features
* Ruby and Javascript snippets will use "([^"]*)" instead of "([^\"]*)"$/ (Aslak Hellesøy)

== 0.7.0 (2010-05-02)

This release is an important milestone for Cucumber. A new parser (the gherkin gem) parses feature
files 50-100 times faster than with 0.6.x and previous releases. Make sure you read the upgrade
instructions! http://wiki.github.com/aslakhellesoy/cucumber/upgrading

== 0.7.0.beta.8 (2010-04-29)

=== Bugfixes
* Inconsistent order of execution Background and Before in 0.7.0.beta.2 (#600 Mike Sassak)