@@ -26,7 +26,7 @@ begin
     gem.add_development_dependency 'prawn', '= 0.6.3'
     gem.add_development_dependency 'prawn-format', '= 0.2.3'
     gem.add_development_dependency 'htmlentities', '>= 4.2.1'
-    gem.add_development_dependency 'rspec', '>= 2.0.0.beta.10'
+    gem.add_development_dependency 'rspec', '>= 2.0.0.beta.11'
     gem.add_development_dependency 'syntax', '>= 1.0.0'
     gem.add_development_dependency 'spork', '>= 0.8.3' unless Cucumber::JRUBY || Cucumber::WINDOWS
 
