@@ -1,3 +1,8 @@
+== In Git
+
+=== New Features
+* Undefined steps with integers (Given 3 cukes) will generate snippets like (Given /(\d+) cukes/). (Aslak Hellesøy)
+
 == 0.8.0 (2010-06-06)
 
 === Bugfixes
